# python-daemon

./: .editorconfig  .gitignore  .isort.cfg  COPYING  ChangeLog  MANIFEST.in  Makefile  README  packaging.mk  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test.mk  test_version.py  tox.ini  twine.mk  version.py
daemon/: _metadata.py  daemon.py  module.mk  pidfile.py  runner.py
doc/: CREDITS  hacking.txt  module.mk
doc/examples/: service-runner.txt
pip-requirements/: base.txt  static-analysis.txt  test.txt
src/daemon/: module.mk  pidfile.py
test/: scaffold.py  test_daemon.py  test_metadata.py  test_pidfile.py  test_runner.py  test_setup.py  test_util_metadata.py  test_util_packaging.py  test_util_version.py
util/: metadata.py  packaging.py  version.py
