# pyproject.toml
# Python project metadata and build settings for this code base.
# Documentation:
#     <URL:https://peps.python.org/pep-0517/>
#     <URL:https://peps.python.org/pep-0518/>
#     <URL:https://peps.python.org/pep-0621/>

[project]

# Name of the Python distribution to build.
name = "python-daemon"

# Keywords to categorise this project.
keywords = ["daemon", "fork", "unix"]

# Trove classifiers for this project.
# Reference: <URL:https://pypi.org/classifiers/>
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]

# The Python version requirements of the project.
requires-python = ">= 3.7"

# Names of fields that must be dynamically computed by the build system.
dynamic = [
    "description",
    "readme",
    "version",
    "authors",
    "maintainers",
    "license",
    "urls",
    "dependencies",
    "optional-dependencies",
    ]

[build-system]

# Minimum requirements for the build system.
requires = [
    "wheel",
    "setuptools >=62.4.0",
    "docutils",
    "changelog-chug",
    ]

# Path to the Python object to perform the build.
build-backend = "setuptools.build_meta"


[tool.coverage.run]

# Source (packages or directories) to measure during execution.
source = [
    "daemon",
    "util",
    "setup",
    ]


# Local-variables:
# coding: utf-8
# mode: conf
# mode: toml
# End:
# vim: fileencoding=utf-8 filetype=toml :
