# pyproject.toml
# Python project metadata and build settings for this code base.
# Documentation:
#     <URL:https://peps.python.org/pep-0517/>
#     <URL:https://peps.python.org/pep-0518/>
#     <URL:https://peps.python.org/pep-0621/>

[project]

# Name of the Python distribution to build.
name = "python-daemon"

# Keywords to categorise this project.
keywords = ["daemon", "fork", "unix"]

# Trove classifiers for this project.
# Reference: <URL:https://pypi.org/classifiers/>
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]

# The Python version requirements of the project.
requires-python = ">= 3.7"

# Core dependencies required for the package to operate.
dependencies = [

    # Framework for working with Python packages.
    # Documentation: <URL:https://setuptools.pypa.io/>.
    "setuptools >= 62.4.0",

    # Platform-independent file locking module.
    # Documentation: <URL:http://docs.openstack.org/developer/pylockfile>.
    "lockfile >= 0.10",

    ]

# Names of fields that must be dynamically computed by the build system.
dynamic = [
    "description",
    "readme",
    "version",
    "authors",
    "maintainers",
    "license",
    "optional-dependencies",
    ]

[project.urls]
"Home Page" = "https://pagure.io/python-daemon/"
"Change Log" = "https://pagure.io/python-daemon/blob/main/f/ChangeLog"
"Source" = "https://pagure.io/python-daemon/"
"Issue Tracker" = "https://pagure.io/python-daemon/issues"


[build-system]

# Minimum requirements for the build system.
requires = [

    # Reference implementation of Python wheel packaging standard (PEP 427).
    # Documentation: <URL:https://wheel.readthedocs.io/>.
    "wheel",

    # Framework for working with Python packages.
    # Documentation: <URL:https://setuptools.pypa.io/>.
    "setuptools >= 62.4.0",

    # Python Documentation Utilities.
    # Documentation: <URL:https://docutils.sourceforge.io/docs/>.
    "docutils",

    # Parser library for project Change Log documents.
    # Documentation: <URL:https://packaging.pypa.io/>.
    "changelog-chug",

    ]

# Path to the Python object to perform the build.
build-backend = "setuptools.build_meta"

[tool.setuptools]

# Can the project be safely installed and run from a zip file?
zip-safe = false

[tool.setuptools.packages.find]

# Folders that contain the packages (default: ["."])
where = ["."]

# Filename globs to exclude from package discovery.
exclude = ["test", "util"]


[tool.coverage.run]

# Source (packages or directories) to measure during execution.
source = [
    "daemon",
    "util",
    "setup",
    ]


# Local-variables:
# coding: utf-8
# mode: conf
# mode: toml
# End:
# vim: fileencoding=utf-8 filetype=toml :
