# pyproject.toml
# Python project metadata and build settings for this code base.
# Documentation:
#     <URL:https://peps.python.org/pep-0517/>
#     <URL:https://peps.python.org/pep-0518/>
#     <URL:https://peps.python.org/pep-0621/>

[project]

# Names of fields that must be dynamically computed by the build system.
# FIXME: PEP 621 disallows the ‘name’ to be dynamically generated.
dynamic = [
    "name",
    "description",
    "readme",
    "version",
    "authors",
    "maintainers",
    "license",
    "keywords",
    "classifiers",
    "urls",
    "requires-python",
    "dependencies",
    "optional-dependencies",
    ]

[build-system]

# Minimum requirements for the build system.
requires = [
    "wheel",
    "setuptools >=62.4.0",
    "docutils",
    "changelog-chug",
    ]

# Path to the Python object to perform the build.
build-backend = "setuptools.build_meta"


[tool.coverage.run]

# Source (packages or directories) to measure during execution.
source = [
    "daemon",
    "util",
    "setup",
    ]


# Local-variables:
# coding: utf-8
# mode: conf
# mode: toml
# End:
# vim: fileencoding=utf-8 filetype=toml :
