# setup.cfg
# Python Distutils configuration options for this distribution.
[metadata]
name = python-daemon
home-page = https://pagure.io/python-daemon/
summary = Library to implement a well-behaved Unix daemon process
description-file =
    README.rst
author = Ben Finney
author-email = ben+python@benfinney.id.au
license = Apache License 2.0
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    daemon
    fork
    unix

[files]
packages =
    daemon

[extras]
devel=
    pbr
    tox

[pbr]
    skip_authors = 1
    skip_changelog = 1

[aliases]
distribute = register sdist bdist_wheel upload

[bdist_wheel]

# Build a single “universal wheel” (for Python 2 and Python 3)?
universal = true

[upload]

# Sign distributions, and upload the signing public key?
sign = true
